<resources>
    <string name="app_name">Product Search</string>
    <string name="action_settings">Settings</string>
    <string name="search">SEARCH</string>
    <string name="wishlist">WISHLIST</string>
    <string name="enter_keyword">Enter Keyword</string>
    <string name="hint_keyword">Keyword</string>
    <string name="hint_category">Category</string>
    <string name="hint_condition">Condition</string>
    <string name="con_new">New</string>
    <string name="con_used">Used</string>
    <string name="con_unspecified">Unspecified</string>
    <string name="hint_shipping">Shipping Options</string>
    <string name="hint_enableneby">Enable Nearby Search</string>
    <string name="error_required">Please enter mendatory filed</string>
    <string name="enter_distance">Miles from</string>
    <string name="hint_from">From</string>
    <string name="radio_curr">Current Location</string>
    <string name="radio_zip">Zipcode</string>
    <string name="but_search">SEARCH</string>
    <string name="but_clear">CLEAR</string>
    <string name="progress_search">Searching Products</string>
    <string name="noresults">No Results</string>
    <string name="showing">Showing </string>
    <string name="resultsfor"> results for </string>
    <string name="product">PRODUCT</string>
    <string name="shipping">SHIPPING</string>
    <string name="photos">PHOTOS</string>
    <string name="similar">SIMILAR</string>
    <string name="highlight">Highlights</string>
    <string name="subtitle">Subtitle</string>
    <string name="price">Price</string>
    <string name="brand">Brand</string>
    <string name="specf">Specifications</string>
    <string name="soldby">Sold By</string>
    <string name="shipinfo">Shipping Info</string>
    <string name="returnpolicy">Return Policy</string>
    <string name="storename">Store Name</string>
    <string name="feedbackscore">Feedback Score</string>
    <string name="popularity">Popularity</string>
    <string name="feedbackstar">Feedback Star</string>
    <string name="shippingcost">Shipping Cost</string>
    <string name="globalshipping">Global Shipping</string>
    <string name="handlingtime">Handling Time</string>
    <string name="condition">Condition</string>
    <string name="policy">Policy</string>
    <string name="returnswithin">Returns within</string>
    <string name="refundmode">Refund Mode</string>
    <string name="shippedby">Shipped by</string>
    <string name="wishlisttotal">Wishlist total(</string>
    <string name="items">  items):</string>
    <string name="nowishes">No Wishes</string>

    <string-array name="category">
        <item>All</item>
        <item>Art</item>
        <item>Baby</item>
        <item>Books</item>
        <item>Clothing, Shoes &amp; Accessories</item>
        <item>Computers/Tablets &amp; Networking</item>
        <item>Health &amp; Beauty</item>
        <item>Music</item>
        <item>Video Games &amp; Consoles</item>
    </string-array>

    <string-array name="sortitem">
        <item>Default</item>
        <item>Name</item>
        <item>Price</item>
        <item>Days</item>
    </string-array>

    <string-array name="sortorder">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
