<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/hint_keyword" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/keywordText"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/colorText"
            android:hint="@string/enter_keyword" />

        <TextView
            android:id="@+id/error_keyword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_required"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginStart="5dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/hint_category" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:entries="@array/category" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/hint_condition" />

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/con_new" />

            <CheckBox
                android:id="@+id/checkUsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/con_used" />

            <CheckBox
                android:id="@+id/checkUnspecified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/con_unspecified" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/hint_shipping" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Local Pickup" />

            <CheckBox
                android:id="@+id/checkFree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Free Shipping" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/hint_enableneby" />

            <CheckBox
                android:id="@+id/checkEnable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-60dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/locationLayout"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/distanceText"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorText"
                android:hint="@string/enter_distance" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/hint_from" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:id="@+id/radio_group">

                <RadioButton
                    android:id="@+id/radioCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radio_curr"
                    android:checked="true"/>


                <RadioButton
                    android:id="@+id/radioZip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1" />

                    <android.support.v7.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/zipText"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="-40dp"
                        android:backgroundTint="@color/colorText"
                        android:hint="@string/radio_zip"
                        android:enabled="false"/>



                <TextView
                    android:id="@+id/error_zip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error_required"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_marginStart="5dp"
                    android:visibility="gone" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <Button
                android:id="@+id/butSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search"
                android:backgroundTint="@color/butColor"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/butClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/butColor"
                android:textColor="@android:color/white"
                android:text="@string/but_clear" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>