<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/progresslayout">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="683dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_search"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/textNoresults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/noresults"
        android:layout_marginTop="300dp"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shownumberlayout"
        android:visibility="gone"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showing"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:textColor="@color/butColor"
            android:layout_marginStart="75dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultsfor"
            android:textStyle="bold"
            android:layout_marginStart="105dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:textColor="@color/butColor"
            android:layout_marginStart="185dp"
            android:textSize="16sp"/>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

    </android.support.v7.widget.RecyclerView>


</LinearLayout>

