<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/detailbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBar"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <ImageButton
                android:id="@+id/go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/goback1"
                android:layout_marginStart="-10dp"
                android:backgroundTint="@android:color/transparent" />
            <TextView
                android:id="@+id/producttit"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginStart="10dp"/>
            <ImageButton
                android:id="@+id/facebut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/facebook" />
        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            style="@style/AppTheme.AppBarOverlay"
            android:id="@+id/detabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@android:color/white">

            <android.support.design.widget.TabItem
                android:id="@+id/productTab"
                android:icon="@drawable/product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product" />

            <android.support.design.widget.TabItem
                android:id="@+id/shippingTab"
                android:icon="@drawable/shipping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipping" />

            <android.support.design.widget.TabItem
                android:id="@+id/photosTab"
                android:icon="@drawable/photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photos" />

            <android.support.design.widget.TabItem
                android:id="@+id/similarTab"
                android:icon="@drawable/similar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/similar" />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>




    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </android.support.v4.view.ViewPager>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab"
        app:layout_anchor="@id/pager"
        app:layout_anchorGravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/cart_plus"
        android:tint="@android:color/white"
        android:backgroundTint="@color/butColor">

    </android.support.design.widget.FloatingActionButton>


</android.support.design.widget.CoordinatorLayout>